# uap-nix

./: .gitignore  0001-Add-debug-logging.patch  0001-Add-more-debug-logging-for-firmware-loading.patch  0001-arch-mips-Update-initrd_start-and-initrd_end.patch  0001-debug-gpiolib.patch  0001-enable-debugging-for-of-fdt.c.patch  0001-mtd-rawnand-add-driver-support-for-MT7621-nand-flash.patch  0001-of-fdt-return-1-if-early_init_dt_scan_memory-found-m.patch  Cargo.toml  README.md  default.nix  fit.its  kernel-config.nix  mt7621_cudy_x6.dts  release.nix  shell.nix  userspace.nix
config/: Cargo.toml
config-tool/: Cargo.toml
config-tool/src/: main.rs
config/src/: lib.rs
eeprom-backup/: factory
initd/: Cargo.toml
initd/src/: error.rs  main.rs  task.rs  util.rs
mtd-backup/: factory.slim
nanobus/: Cargo.toml
nanobus/src/: broadcast.rs  lib.rs  main.rs
netconf/: Cargo.toml
netconf/src/: early.rs  epoll.rs  error.rs  main.rs  neighbours.rs  network.rs  task.rs  util.rs
netconf/src/network/: config.rs  mod.rs  netlink.rs
npins/: sources.json
wirelessd/: Cargo.toml
wirelessd/src/: main.rs
