[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
log = "0.4"
schemars = { version = "0.8", optional = true }

[dev-dependencies]
clap = { version = "4", features = [ "derive" ] }

[features]
schema-generator = [ "schemars" ]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
