[package]
name = "initd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = [ "derive", "help", "usage", "std" ], default-features = false }
simplelog = "0.12"
nc = "0.8"
thiserror = "1"
log = "0.4"
config = { path = "../config" }
