[package]
name = "netconf"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlink-sys = "0.8.2"
netlink-packet-route = "0.11"
netlink-packet-core = "0.4"
nc = "0.8"
thiserror = "1"
log = "0.4"
simplelog = "0.12"
serde_yaml = "0.9"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [ "rt", "macros", "rt-multi-thread", "time" ] }
rtnetlink = "0.11"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
