[package]
name = "netconf"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlink-sys = "0.8.2"
netlink-packet-route = "0.11"
netlink-packet-core = "0.4"
nc = "0.8"
thiserror = "1"
log = "0.4"
simplelog = "0.12"
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [ "rt", "macros", "rt-multi-thread", "time" ] }
rtnetlink = "0.11"
futures = "0.3"
clap = { version = "4", features = [ "derive" ] }

schemars = { version = "0.8", optional = true }

[dev-dependencies]
# to format some json examples during testing

[features]
default = []
schema-generator = ["dep:schemars"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
