[package]
name = "netconf"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.11"
nc = "0.8"
thiserror = "1"
log = "0.4"
simplelog = "0.12"
tokio = { version = "1", features = [ "rt", "macros", "rt-multi-thread", "time" ] }
futures = { version = "0.3", default-features = false }
clap = { version = "4", features = [ "derive" ], default-features = false }
config = { path = "../config" }


[dev-dependencies]
# to format some json examples during testing
